release: bump version to 0.39.0